Fix add to cart in bundle products

--- a/app/design/frontend/Satoshi/Hyva/Magento_Bundle/layout/catalog_product_view_type_bundle.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Bundle/layout/catalog_product_view_type_bundle.xml
@@ -5,5 +5,6 @@
         <move element="product.info.quantity" destination="product.actions"/>
         <move element="product.info.addtocart" destination="product.actions"/>
         <move element="addtocart.shortcut.buttons" destination="product.actions"/>
+        <move element="product.info.form" destination="product.info"/>
     </body>
 </page>
