--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -130,8 +130,8 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         <?php
         $popup_id = 'product_actions-' . $product->getId();
         $options = $block->getChildBlock('product.info.form') ? $block->getChildBlock('product.info.form')->setData(['is_popup' => true])->toHtml() : '';
-
         $options .= $block->getChildHtml('product_options_wrapper_bottom');
+        $minHeight = $product->getTypeId() === 'bundle' ? 'min-h-24' : 'min-h-20';
 
         $productActions = <<<HTML
             <template x-if="\$store.main.isMobile">
@@ -140,7 +140,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                   {$options}
                 </div>
 
-                <div class="min-h-20 md:hidden"></div>
+                <div class="{$minHeight} md:hidden"></div>
                   <template x-portal="document.getElementById('popup-fixed-content-portal')">
                     <div x-show="\$store.popup.currentPopup === productActionsPopup">
                       <div class="bg-bg-500 relative z-10">
