--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/grid.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/grid.phtml
@@ -89,8 +89,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                                     :class="isLoading && 'button--disabled'"
                                     :disabled="isLoading"
                                     title="<?= $escaper->escapeHtmlAttr(__('Delete')) ?>"
-                                    @click.prevent="deleteAddress('<?= $address->getId() ?>',
-                                    '<?= $escaper->escapeJs(__('Are you sure you want to delete this address?')) ?>')"
+                                    @click.prevent="deleteAddress('<?= $address->getId() ?>', '<?= $escaper->escapeJs(__('Are you sure you want to delete this address?')) ?>', '<?= $escaper->escapeJs($block->getDeleteUrl()) ?>')"
                                     href="#"
                                 >
                                     <?= $hyvaicons->renderHtml('remove', 'w-full h-full') ?>
