INTERNAL-16; remove Address() data

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
@@ -10,7 +10,7 @@ use Magento\Framework\Escaper;
 /** @var ViewModelRegistry $viewModels */
 ?>
 
-<section class="mb-7 md:mb-8" x-data="Address()">
+<section class="mb-7 md:mb-8">
     <h2 class="text-text-500 text-lg font-bold mb-5">
         <?= $escaper->escapeHtml(__('Default Addresses')) ?>
     </h2>
