INTERNAL-48; add placeholder attr

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/fax.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/fax.phtml
@@ -25,6 +25,7 @@ $validationClass = $escaper->escapeHtmlAttr($this->helper(AddressHelper::class)-
                value="<?= $escaper->escapeHtmlAttr($block->getFax()) ?>"
                title="<?= $escaper->escapeHtmlAttr(__('Fax')) ?>"
                class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
+               placeholder="<?= $escaper->escapeHtmlAttr(__('Enter your fax number')) ?>"
         >
     </div>
 </div>
