--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/login.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/login.phtml
@@ -5,6 +5,8 @@ declare(strict_types=1);
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\Customer\LoginButton;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
+use Hyva\Theme\ViewModel\HeroiconsSolid;
+use Hyva\Theme\ViewModel\ReCaptcha;
 use Magento\Customer\Block\Form\Login;
 use Magento\Framework\Escaper;
 
@@ -12,28 +14,32 @@ use Magento\Framework\Escaper;
 /** @var Login $block */
 /** @var LoginButton $loginButtonViewModel */
 /** @var ViewModelRegistry $viewModels */
+/** @var ReCaptcha $recaptcha */
 /** @var HeroiconsOutline $heroiconsoutline */
+/** @var HeroiconsSolid $heroiconssolid */
 
+$heroiconsoutline = $viewModels->require(HeroiconsOutline::class);
+$heroiconssolid = $viewModels->require(HeroiconsSolid::class);
 $loginButtonViewModel = $viewModels->require(LoginButton::class);
 
 // Disabling autocomplete on form fields is not recommended,
 // Enable it in Stores->Configuration->Customers configuration->Password Options
 
+$recaptcha = $block->getData('viewModelRecaptcha');
 $errorMessage = $block->getErrorMessage();
 $successMessage = $block->getSuccessMessage();
-
 ?>
-<div class="mx-auto mb-16 w-[412px] max-w-full"
-     x-data="Authentication(`<?= htmlspecialchars($block->getChildHtml('recaptcha_validation')); ?>`)">
+
+<div class="mx-auto mb-16 w-[412px] max-w-full">
     <div aria-labelledby="block-customer-login-heading">
         <form class="w-full"
               action="<?= $escaper->escapeUrl($block->getPostActionUrl()) ?>"
               method="post"
-              id="customer-login-form"
-              @submit.prevent="submitAuthForm('customer-login-form', `<?= htmlspecialchars($block->getChildHtml('recaptcha_validation')); ?>`)"
-            >
+              x-data="Authentication('<?= $escaper->escapeJS($recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_LOGIN) : '') ?>')"
+              @submit.prevent="submitAuthForm('customer-login-form')"
+              id="customer-login-form">
             <?= $block->getBlockHtml('formkey') ?>
-            <fieldset class="fieldset login">
+            <fieldset>
                 <legend class="flex items-center justify-between sm:text-center">
                     <h2 class="mb-7 w-full text-2xl">
                         <?= $escaper->escapeHtml(__('Login')) ?>
@@ -44,23 +50,25 @@ $successMessage = $block->getSuccessMessage();
                         <?= $successMessage ?>
                     </div>
                 <?php endif; ?>
-                <div class="field email required mt-3">
+                <div class="mt-3">
                     <input name="login[username]"
-                        placeholder="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
-                        class="input__field input__field--outline bg-bg-500 px-5 py-4"
-                        required
-                        value="<?= $escaper->escapeHtmlAttr($block->getUsername()) ?>"
-                        autocomplete="<?= $block->isAutocompleteDisabled() ? 'off' : 'username' ?>"
-                        id="email"
-                        type="email"
-                        title="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
+                           class="input__field input__field--outline bg-bg-500 px-5 py-4"
+                           placeholder="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
+                           required
+                           value="<?= $escaper->escapeHtmlAttr($block->getUsername()) ?>"
+                           autocomplete="<?= $block->isAutocompleteDisabled() ? 'off' : 'username' ?>"
+                           id="email"
+                           type="email"
+                           title="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
                     />
                 </div>
+
                 <?php if ($errorMessage): ?>
-                    <div class="text-error mt-3">
+                    <p class="text-error mt-3">
                         <?= $errorMessage ?>
-                    </div>
+                    </p>
                 <?php endif; ?>
+
                 <div class="flex items-center mt-3">
                     <input name="login[password]"
                            placeholder="<?= $escaper->escapeHtmlAttr(__('Password')) ?>"
@@ -72,31 +80,34 @@ $successMessage = $block->getSuccessMessage();
                            title="<?= $escaper->escapeHtmlAttr(__('Password')) ?>"
                     />
                 </div>
+                <?php if ($recaptcha): ?>
+                    <div class="my-4">
+                        <?= $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_LOGIN) ?>
+                    </div>
+                <?php endif; ?>
+                <template x-for="(value, key) in errorMessages" :key="key">
+                    <p class="text-error mb-3" x-text="value"></p>
+                </template>
                 <?= $block->getChildHtml('form_additional_info') ?>
-                <a class="link link--primary mt-2 text-sm tracking-widest" href="<?= $escaper->escapeUrl($block->getForgotPasswordUrl()) ?>" x-element-transition-trigger>
+                <a class="link link--primary mt-2 text-sm tracking-widest"
+                   href="<?= $escaper->escapeUrl($block->getForgotPasswordUrl()) ?>" x-element-transition-trigger>
                     <span><?= $escaper->escapeHtml(__('Forgot Your Password?')) ?></span>
                 </a>
-                <button type="submit" class="button button--filled-primary mt-7 w-full py-4 " name="send">
-                    <span><?= $escaper->escapeHtml(__('Sign In')) ?></span>
+                <button type="submit"
+                        class="button button--filled-primary mt-7 w-full py-4" name="send"
+                    <?php if ($loginButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>>
+                    <?= $escaper->escapeHtml(__('Sign In')) ?>
                 </button>
-                <div class="mt-4">
-                    <?= $block->getBlockHtml('recaptcha_input_field_recaptcha') ?>
-                </div>
-                <div x-show="displayErrorMessage" class="mt-3">
-                    <p class="text-red" x-text="generalErrorMessage"></p>
-                </div>
-                <template x-for="(value, key) in errorMessages" :key="key">
-                    <div>
-                        <p class="text-error" x-text="value"></p>
-                    </div>
-                </template>
-
                 <div class="mt-6 text-center text-sm tracking-wider">
-                    <a href="<?= $this->getUrl('customer/account/create') ?>" class="link link--primary text-md" x-element-transition-trigger>
+                    <a href="<?= $this->getUrl('customer/account/create') ?>" class="link link--primary text-md"
+                       x-element-transition-trigger>
                         <?= $escaper->escapeHtml(__('Create new account')) ?>
                     </a>
                 </div>
             </fieldset>
         </form>
+    </div>
+    <div class="w-full mt-4">
+        <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_LOGIN) : '' ?>
     </div>
 </div>
